--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <section>
     <div class="example-button-row">
-        <button mat-stroked-button color="primary">Reactive Forms</button>
+        <button mat-stroked-button color="primary" routerLink="reactive-forms">Reactive Forms</button>
     </div>
 </section>
