dynamic array forms

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,7 @@
 <section>
     <div class="example-button-row">
         <button mat-stroked-button color="primary" routerLink="reactive-forms">Reactive Forms</button>
+        <button mat-stroked-button color="primary" routerLink="dynamic-array">Reactive Forms <br> Dynamic
+            Array</button>
     </div>
 </section>
