--- a/src/app/components/dynamic-array/dynamic-array.component.scss
+++ b/src/app/components/dynamic-array/dynamic-array.component.scss
@@ -4,8 +4,16 @@ $ciRed: #ff00aa;
 $ciGreen: #46fcb4;
 $second: #0c1016;
 
+.cardContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 96px);
+}
+
 form {
     display: flex;
+    width: 400px;
     flex-direction: column;
 
     .form-array {
@@ -24,11 +32,9 @@ form {
 
     input,
     textarea {
-        margin: 10px;
-        font-size: 20px;
-        color: white;
+        padding: 20px;
         background-color: rgba(255, 255, 255, 0.1);
-        border: none;
+        border: 1px solid black;
         border-radius: 10px;
         margin: 0 0 20px 0;
 
@@ -45,8 +51,8 @@ form {
     }
 
     button {
-        padding: 10px 20px;
-        font-size: 20px;
+        margin: 10px 0 0 0;
+        padding: 20px;
         color: $second;
         background-color: $ciBlue;
         border: none;
@@ -60,4 +66,6 @@ form {
             opacity: 0.4;
         }
     }
+
+
 }
