--- a/src/app/components/reactive-forms/reactive-forms.component.scss
+++ b/src/app/components/reactive-forms/reactive-forms.component.scss
@@ -41,7 +41,7 @@ form {
     button {
         color: $second;
         margin: 10px 0 0 0;
-        padding: 2rem;
+        padding: 20px;
         border: none;
         border-radius: 10px;
         background-color: $ciBlue;
