addMember and reateMember

--- a/src/app/components/dynamic-array/dynamic-array.component.html
+++ b/src/app/components/dynamic-array/dynamic-array.component.html
@@ -15,6 +15,8 @@
             </ng-container>
         </ng-container>
 
+        <button (click)="addMember()">Mitglied hizufügen</button>
+
         <button [disabled]="isDisabled()" type="submit">Submit</button>
 
     </form>
