--- a/src/app/components/dynamic-array/dynamic-array.component.html
+++ b/src/app/components/dynamic-array/dynamic-array.component.html
@@ -13,6 +13,8 @@
                     <input type="text" placeholder="vorname" formControlName="vorname">
                     <input type="text" placeholder="nachname" formControlName="nachname">
                 </div>
+
+                <button (click)="removeMember(i)">Mitglied entfernen</button>
             </ng-container>
         </ng-container>
 
