--- a/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/src/app/components/reactive-forms/reactive-forms.component.html
@@ -1,5 +1,5 @@
 <!-- <p>import { ReactiveFormsModule } from '@angular/forms';</p> -->
-<p>Reactive Forms</p>
+<p class="title">Reactive Forms</p>
 
 <div class="cardContainer">
 
