custom form fields - component

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,5 +3,6 @@
         <button mat-stroked-button color="primary" routerLink="reactive-forms">Reactive Forms</button>
         <button mat-stroked-button color="primary" routerLink="dynamic-array">Reactive Forms <br> Dynamic
             Array</button>
+        <button mat-stroked-button color="primary" routerLink="custom-form-fields">Custom Form <br> Fields</button>
     </div>
 </section>
