seat place image

--- a/src/app/components/custom-form-fields/custom-form-fields.component.html
+++ b/src/app/components/custom-form-fields/custom-form-fields.component.html
@@ -13,6 +13,8 @@
 
         <input type="text" id="lastname" name="lastname" formControlName="lastname" placeholder="lastname">
 
+        <app-seat-place></app-seat-place>
+
     </form>
 
 </div>
