--- a/src/app/components/custom-form-fields/custom-form-fields.component.html
+++ b/src/app/components/custom-form-fields/custom-form-fields.component.html
@@ -13,7 +13,7 @@
 
         <input type="text" id="lastname" name="lastname" formControlName="lastname" placeholder="lastname">
 
-        <app-seat-place></app-seat-place>
+        <app-seat-place id="table" formControlName="table"></app-seat-place>
 
     </form>
 
