--- a/src/app/components/seat-place/seat-place.component.html
+++ b/src/app/components/seat-place/seat-place.component.html
@@ -1,8 +1,9 @@
-<div *ngFor="let img of image; let i=index">
-    <table>
-        <tr>
-            <td *ngFor="let img of image[i];">
-                <img *ngIf="img; else blanc" src="../assets/img/chair_black.svg">
+<div >
+    <table *ngFor="let img of image; let i=index">
+        <tr >
+            <td *ngFor="let img of image[i]; let j=index">
+                <img *ngIf="img; else blanc" [class.selected]="isSelected('table-'+i+j)" (click)="select('table-'+i+j)"
+                    src="../assets/img/chair_black.svg">
             </td>
         </tr>
     </table>
