--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,8 +1,5 @@
-<section>
-    <div class="example-button-row">
-        <button mat-stroked-button color="primary" routerLink="reactive-forms">Reactive Forms</button>
-        <button mat-stroked-button color="primary" routerLink="dynamic-array">Reactive Forms <br> Dynamic
-            Array</button>
-        <button mat-stroked-button color="primary" routerLink="custom-form-fields">Custom Form <br> Fields</button>
-    </div>
-</section>
+<mat-button-toggle-group name="fontStyle">
+    <mat-button-toggle value="reactive-forms" routerLink="reactive-forms">Reactive Forms</mat-button-toggle>
+    <mat-button-toggle value="dynamic-array" routerLink="dynamic-array">Reactive Forms Dynamic Array</mat-button-toggle>
+    <mat-button-toggle value="custom-form-fields" routerLink="custom-form-fields">Custom Form Fields</mat-button-toggle>
+</mat-button-toggle-group>
