--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,11 +4,10 @@
 }
 
 mat-drawer {
-    width: 142px;
-    padding-left: 6px;
-    padding-top: 6px;
+    width: 126px;
 }
 
 .logo {
-    height: 60px;
+    height: 63px;
+    border-bottom: solid 1.4px #e0e0e0;
 }
